<resources>
    <string name="app_name">Smart Home</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>

    <string name="slide_1_title">SOIMAH</string>
    <string name="slide_1_desc">System Automation rumah berbasis IOT</string>

    <string name="slide_2_title">Door Lock</string>
    <string name="slide_2_desc">Pantau akses keluar masuk pintu rumah anda secara nyata</string>

    <string name="slide_3_title">Smart Lamp</string>
    <string name="slide_3_desc">Kendalikan kondisi lampu ruangan di rumah anda dengan mudah</string>

    <string name="our_team">
        TEI
        \n\t-Alfian Dwi Susanto
        \n\t-Annisa Eka Putri
        \n\t-Assaufi Anggie Anggela Anggraeni
        \n\t-Chitra Dwi Wulandari
        \n\t-Mahran Mawarid
        \n\t-Putri Dwi Angelina
        \n\t-Robbiattul Hadawiah
        \nMM
        \n\t- Barokah Ath Thariq
        \n\t- Hiratsani Rabi
        \n\t- Nindito Ramadhani
        \n\t- Radjasa Wahyu Pratama
        \n\t- Samuel Willem Alvito
        \nRPL
        \n\t- Kevin Surya
        \n\t- Rully Irvandi
        \n\t- Samuel B. Jeffersen

    </string>
    <string name="tentang_aplikasi">SOIMAH</string>
    <!--<string name="soimahdesc">SOIMAH (System Automation rumah berbasis IOT) Versi 0.0.1</string>-->
    <string name="soimahdesc">Versi 0.0.1</string>
    <string name="no_kartu">No Kartu</string>
    <string name="nama">Nama</string>
    <string name="jam">Jam</string>
    <string name="select_date_button">Select Date Button</string>
    <string name="soimah">Soimah</string>
    <string name="soimahdescc">SOIMAH adalah aplikasi berbasis IoT yang berguna untuk mempermudah rumah tangga dalam mengakses fitur yang ada di dalam rumah.</string>
    <!--<string name="carapake">- Pada menu lampu terdapat daftar ruangan di rumah disertai switch untuk mematikan atau menghidupan lampu.  \n- Pada menu Door Lock terdapat daftar riwayat akses keluar masuk pintu RFID. \n- Pada menu Door Lock terdapat tombol pilih tanggal untuk melihat daftar riwayat di hari yang tentukan.</string>-->
    <string name="carapake_lampu1">Terdapat daftar ruangan di rumah disertai switch untuk mematikan atau menghidupan lampu. </string>
    <string name="carapake_doorlock1">Terdapat daftar riwayat akses keluar masuk pintu RFID.</string>
    <string name="carapake_doorlock2">Pada menu Door Lock terdapat tombol pilih tanggal untuk melihat daftar riwayat di hari yang tentukan. </string>
    <string name="lampu">Lampu</string>
    <string name="door_lock">Door Lock</string>


    <!--Alirkan-->
    <string name="riwayat_siram">Riwayat siram</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="kelambapan_tanah">Kelambaban Tanah</string>
    <string name="waktu">Waktu</string>
    <string name="riwayat">Riwayat</string>
    <string name="siram">Siram</string>
    <string name="nama_aplikasi">Alirkan</string>
    <string name="versi">Versi 0.0.1</string>
    <string name="our_teamalirkan">
        TEI
        \n\t- Ahmad Fauzan G.
        \n\t- Farah Oktavianizar
        \n\t- Muhammad Ikbal
        \nMM
        \n\t- Barokah Ath Thariq
        \n\t- Hiratsani Rabi
        \n\t- Nindito Ramadhani
        \n\t- Radjasa Wahyu Pratama
        \n\t- Samuel Willem Alvito
        \nRPL
        \n\t- M. Hajid Alakthar
        \n\t- Samuel B. Jeffersen

    </string>
    <string name="descAplikasi">\tAlirkan adalah penyiram tanaman sederhana yang berguna untuk memudahkan pekerjaan manusia dalam menyiram tanaman secara otomatis.</string>
    <string name="petunjuk_penggunaan">Petunjuk Penggunaan</string>
    <!--<string name="petunjukPenggunaan">- Aplikasi akan menerima notifikasi ketika Kelembapan tanaman berkurang atau diatas 600. \n- Secara otomatis penyiram tanaman akan mengeluarkan air dan sisa dari penyiraman tersebut akan disaring kembali ke tempat penampungan semula.  \n- Air dalam penampungan akan terisi secara otomatis.</string>-->
    <string name="petunjukPenggunaan">- Aplikasi akan menerima notifikasi ketika kelembapan tanaman berkurang atau diatas 600. \n- Pada menu Penyiraman terdapat daftar riwayat penyiraman tanaman yang dilakukan oleh mesin.\n- Pada menu Kelembapan terdapat  daftar riwayat kelembapan tanaman yang akan terus diperbaharui setiap 30 menit. \n- Pada menu kelembapan, dan penyiraman terdapat tombol pilih tanggal untuk melihat daftar riwayat di hari yang tentukan.</string>
    <string name="petunjukKelembapan1">Aplikasi akan menerima notifikasi ketika kelembapan tanaman berkurang atau diatas 600.</string>
    <string name="petunjukKelembapan2">Daftar riwayat penyiraman tanaman yang dilakukan oleh mesin.</string>
    <string name="petunjukKelembapan3">Terdapat tombol pilih tanggal untuk melihat daftar riwayat di hari yang tentukan.</string>
    <string name="petunjukPenyiraman1">Daftar riwayat kelembapan tanaman yang akan terus diperbaharui setiap 30 menit.</string>
    <string name="petunjukPenyiraman2">Terdapat tombol pilih tanggal untuk melihat daftar riwayat di hari yang tentukan.</string>
    <string name="penyiraman">Penyiraman</string>
    <string name="bantuan">Bantuan</string>
    <string name="tentang">Tentang</string>
    <string name="Kelembapan">Kelembapan</string>
    <string name="gambar_Kelembapan">Icon Kelembapan</string>
    <string name="gambar_tentang">Icon Tentang</string>
    <string name="gambar_penyiraman">Icon Penyiraman</string>
    <string name="gambar_bantuan">Icon Bantuan</string>
    <string name="icon_alirkan">Icon Alirkan</string>
    <string name="button_pilih_tanggal">button pilih tanggal</string>

    <string name="nextalirkan">LANJUT</string>
    <string name="skipalirkan">LEWATI</string>
    <string name="startalirkan">MULAI</string>

    <string name="slide_1_titlealirkan">Alirkan</string>
    <string name="slide_1_descalirkan">Aplikasi Manajemen Pengairan Berbasis IOT</string>

    <string name="slide_2_titlealirkan">Penyiram Cerdas</string>
    <string name="slide_2_descalirkan">Siram tanamanmu secara otomatis sesuai kondisi kelembapan</string>

    <string name="slide_3_titlealirkan">Monitoring</string>
    <string name="slide_3_descalirkan">Pantau riwayat penyiraman dan kelembapan tanamanmu secara berkala</string>
    <string name="alirkan">Tentang Aplikasi</string>
    <string name="smktarunabhakti_net">smktarunabhakti.net</string>
    <string name="pengembang">Pengembang</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>


</resources>
