<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_soimah"
    android:orientation="vertical"
    tools:context=".alirkan.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <TableLayout
            android:id="@+id/table_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/card1"
                    style="@style/CardMenu"
                    android:layout_marginHorizontal="8dp"
                    android:elevation="16dp"
                    card_view:cardCornerRadius="4dp">

                    <ImageButton
                        android:id="@+id/ibtn_kelembaban"
                        style="@style/ImageButtonMenu"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/gambar_Kelembapan"
                        android:src="@drawable/ic_leaf" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="8dp"
                        android:text="@string/Kelembapan"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card2"
                    style="@style/CardMenu"
                    android:layout_marginHorizontal="8dp"
                    android:elevation="16dp"
                    card_view:cardCornerRadius="4dp">

                    <ImageButton
                        android:id="@+id/ibtn_penyiraman"
                        style="@style/ImageButtonMenu"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/gambar_penyiraman"
                        android:src="@drawable/ic_humidity" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="8dp"
                        android:text="@string/penyiraman"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/card3"
                    style="@style/CardMenu"
                    android:layout_marginHorizontal="8dp"
                    android:elevation="16dp"
                    card_view:cardCornerRadius="4dp">

                    <ImageButton
                        android:id="@+id/ibtn_help"
                        style="@style/ImageButtonMenu"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/gambar_bantuan"
                        android:src="@drawable/ic_question" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="8dp"
                        android:text="@string/bantuan"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card4"
                    style="@style/CardMenu"
                    android:layout_marginHorizontal="8dp"
                    android:elevation="16dp"
                    card_view:cardCornerRadius="4dp">

                    <ImageButton
                        android:id="@+id/ibtn_about"
                        style="@style/ImageButtonMenu"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/gambar_tentang"
                        android:src="@drawable/ic_info" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="8dp"
                        android:text="@string/tentang"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>