<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DecisionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <TableLayout
            android:id="@+id/table_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardsoimah"
                    style="@style/CardMenu"
                    android:layout_marginHorizontal="8dp"
                    android:elevation="16dp"
                    card_view:cardCornerRadius="4dp">

                    <ImageButton
                        android:id="@+id/ibtn_soimah"
                        style="@style/ImageButtonMenu"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/gambar_bantuan"
                        android:src="@drawable/ic_logo_soimah" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="8dp"
                        android:text="@string/soimah"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardalirkan"
                    style="@style/CardMenu"
                    android:layout_marginHorizontal="8dp"
                    android:elevation="16dp"
                    card_view:cardCornerRadius="4dp">

                    <ImageButton
                        android:id="@+id/ibtn_alirkan"
                        style="@style/ImageButtonMenu"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/gambar_tentang"
                        android:src="@drawable/ic_logo_alirkan_versi_coconut" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="8dp"
                        android:text="Alirkan"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                </android.support.v7.widget.CardView>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>